# UploadBot

./: .env.example  .replit  Dockerfile  bot_session.session  config.py  main py  main.py  pyproject.toml  replit.md
bot/: __init__.py  compression.py  handlers.py  storage.py  utils.py
