[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pycryptodome>=3.23.0",
    "python-telegram-bot>=22.3",
    "requests>=2.32.5",
    "telegram>=0.0.1",
    "telethon>=1.41.0",
    "urllib3>=2.5.0",
    "flask>=3.1.2",
    "aiohttp>=3.12.15",
    "mega.py==1.0.8",
]
